--- a/3/2_layer_network.ipynb
+++ b/3/2_layer_network.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "prerequisite-jesus",
+   "id": "liberal-nothing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "southeast-drove",
+   "id": "exact-canadian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,58 +27,86 @@
     "def polynomial(x):\n",
     "    return (x ** 5 + 3 * x ** 4 - 11 * x ** 3 - 27 * x ** 2 + 10 * x + 64) / 100\n",
     "\n",
+    "def a(w, x):\n",
+    "    return w.dot(x)\n",
+    "\n",
+    "def g(x):\n",
+    "    1 / (1 + numpy.exp(-x))\n",
+    "\n",
     "def compute_loss(w_1, w_2):\n",
-    "    return w_1 ** 2 + w_2 ** 2 + 30 * numpy.sin(w_1) * numpy.sin(w_2)\n",
+    "    return \n",
     "\n",
     "def compute_gradient(w):\n",
-    "    return numpy.array([2 * w[0] + 30 * numpy.sin(w[1]) * numpy.cos(w[0]), 2 * w[1] + 30 * numpy.sin(w[0]) * numpy.cos(w[1])])\n",
+    "    return \n",
     "\n",
-    "def gradient_descent_adaptive(w, eta, x, t):\n",
-    "    y = linear_function(w[1], w[0], x)\n",
-    "    gradient = gradient_function(y, t, x)\n",
-    "    old_loss = loss_function(y,t)\n",
-    "    while numpy.linalg.norm(gradient) > 10e-5:\n",
-    "        y = linear_function(w[1], w[0], x)\n",
-    "        loss = loss_function(y, t)\n",
-    "        gradient = gradient_function(y, t, x)\n",
+    "def gradient_descent(w, eta, x, t, epochs):\n",
+    "    loss_array = numpy.zeros(epochs)\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
     "        \n",
-    "        if loss >= old_loss:\n",
-    "            eta *= 0.5\n",
-    "        else:\n",
-    "            eta *= 1.1\n",
-    "        \n",
-    "        w -= eta * gradient\n",
-    "        old_loss = loss\n",
-    "    return w"
+    "    \n",
+    "    \n",
+    "    return w, loss_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "classified-advancement",
+   "execution_count": 12,
+   "id": "behind-passport",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 1116)\n",
+      "[-0.40128491  5.88016741 -9.79183315 -7.30296559  1.40038245  4.05021712\n",
+      " -1.950041    2.04707071  1.58358297 -0.43438309]\n"
+     ]
+    }
+   ],
    "source": [
-    "# datasets\n",
-    "amount = numpy.random.randint(low=20, high=2000)\n",
+    "# define number of samples\n",
+    "d = numpy.random.randint(low=20, high=2000)\n",
     "\n",
-    "x_1 = numpy.random.uniform(low=-2, high=2, size=(amount,))\n",
+    "# datasets\n",
+    "x_1 = numpy.random.uniform(low=-2, high=2, size=(d))\n",
     "t_1 = cosine(x_1)\n",
     "\n",
-    "x_2 = numpy.random.uniform(low=-2, high=2, size=(amount,))\n",
+    "x_2 = numpy.random.uniform(low=-2, high=2, size=(d))\n",
     "t_2 = gaussian(x_2)\n",
     "\n",
-    "x_3 = numpy.random.uniform(low=-4.5, high=3.5, size=(amount,))\n",
-    "t_2 = polynomial(x_3)"
+    "x_3 = numpy.random.uniform(low=-4.5, high=3.5, size=(d))\n",
+    "t_3 = polynomial(x_3)\n",
+    "\n",
+    "# init weights\n",
+    "k = 10\n",
+    "w_1 = numpy.random.uniform(low=-10, high=10, size=(k,d))\n",
+    "w_2 = numpy.random.uniform(low=-10, high=10, size=(k))\n",
+    "\n",
+    "# learning rate\n",
+    "eta = 0.02\n",
+    "\n",
+    "# number of epochs\n",
+    "epochs = 10\n",
+    "\n",
+    "# run gradient descent for x_1 dataset\n",
+    "w_x_1 = gradient_descent()\n",
+    "\n",
+    "# plot the graph\n",
+    "\n",
+    "# run gradient descent for x_3 dataset\n",
+    "w_x_2 = gradient_descent()\n",
+    "\n",
+    "# plot the graph\n",
+    "\n",
+    "# run gradient descent for x_3 dataset\n",
+    "w_x_3 = gradient_descent()\n",
+    "\n",
+    "# plot the graph\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "short-madness",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
