Ex. 3 correct version

--- a/3/2_layer_network.ipynb
+++ b/3/2_layer_network.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cathedral-separation",
+   "id": "continuing-publication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sorted-evaluation",
+   "id": "academic-cheat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,23 +28,23 @@
     "    return (x ** 5 + 3 * x ** 4 - 11 * x ** 3 - 27 * x ** 2 + 10 * x + 64) / 100 \n",
     "\n",
     "def sigmoid(x):\n",
-    "    return 1 / (1 + numpy.exp(-x))\n",
+    "    return 1. / (1 + numpy.exp(-x))\n",
     "\n",
     "def loss_function(y, t): # L2 Loss\n",
-    "    return numpy.mean((y - t) ** 2) / 2\n",
+    "    return numpy.mean((y - t) ** 2)\n",
     "\n",
     "def network_output(x, w_1, w_2):\n",
     "    h = sigmoid(w_1.dot(x))\n",
-    "    h[0,:] = 1. # bias\n",
+    "    h[0] = 1. # bias\n",
     "    y = w_2.dot(h)\n",
     "    return y, h\n",
     "\n",
     "def compute_gradient_layer_1(x, w, h, y, t):\n",
     "    tmp = numpy.outer(w, y - t) * h * (1 - h)\n",
-    "    return 2 * tmp.dot(x.T) / n\n",
+    "    return tmp.dot(x.T) / len(x)\n",
     "\n",
     "def compute_gradient_layer_2(h, y, t):\n",
-    "    return 2 * numpy.mean((y - t) * h, axis=1)\n",
+    "    return numpy.mean((y - t) * h, axis=1)\n",
     "\n",
     "def gradient_descent(x, t, w_1, w_2, eta, epochs):\n",
     "    loss_array = numpy.zeros(epochs)\n",
@@ -61,25 +61,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "global-courage",
+   "execution_count": 3,
+   "id": "impaired-happening",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "random() got an unexpected keyword argument 'low'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-a9def01667a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# datasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mx_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mx_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.\u001b[0m \u001b[0;31m# add bias\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mt_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcosine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.random\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: random() got an unexpected keyword argument 'low'"
+     ]
+    }
+   ],
    "source": [
     "# define number of samples\n",
-    "n = 1000\n",
+    "n = 200\n",
     "\n",
     "# datasets\n",
     "x_1 = numpy.random.uniform(low=-2, high=2, size=(2,n))\n",
-    "x_1[:,0] = 1. # add bias\n",
+    "x_1[0] = 1. # add bias\n",
     "t_1 = cosine(x_1[1,:])\n",
     "\n",
     "x_2 = numpy.random.uniform(low=-2, high=2, size=(2,n))\n",
-    "x_2[:,0] = 1. # add bias\n",
+    "x_2[0] = 1. # add bias\n",
     "t_2 = gaussian(x_2[1,:])\n",
     "\n",
     "x_3 = numpy.random.uniform(low=-4.5, high=3.5, size=(2,n))\n",
-    "x_3[:,0] = 1. # add bias\n",
+    "x_3[0] = 1. # add bias\n",
     "t_3 = polynomial(x_3[1,:])\n",
     "\n",
     "# init weights\n",
@@ -88,7 +101,7 @@
     "w_2 = numpy.random.uniform(low=-10, high=10, size=(k+1)) # second layer weights\n",
     "\n",
     "# learning rate\n",
-    "eta = 0.01\n",
+    "eta = 0.1\n",
     "\n",
     "# number of epochs\n",
     "epochs = 50000\n",
