--- a/7/face_identification.ipynb
+++ b/7/face_identification.ipynb
@@ -8,7 +8,13 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torchvision"
+    "import torchvision\n",
+    "import PIL\n",
+    "import numpy\n",
+    "import collections\n",
+    "import types\n",
+    "from scipy.spatial import distance\n",
+    "import os"
    ]
   },
   {
@@ -16,211 +22,108 @@
    "execution_count": 2,
    "id": "86065b48-4e07-423b-a2db-121f965d617b",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Fully_Connected_Network(torch.nn.Module):\n",
-    "    def __init__(self, K):\n",
-    "        # call base class constructor\n",
-    "        super(Fully_Connected_Network, self).__init__()\n",
-    "        \n",
-    "        # init components\n",
-    "        self.W1 = torch.nn.Linear(784, K, bias=True)\n",
-    "        self.activation = torch.nn.Sigmoid()\n",
-    "        self.w2 = torch.nn.Linear(K, 10)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        return self.w2(self.activation(self.W1(x)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c318d951-f1a4-497a-a542-f50daadf36b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CNN_Network(torch.nn.Module):\n",
-    "    def __init__(self, K):\n",
-    "        # call base class constructor\n",
-    "        super(CNN_Network, self).__init__()\n",
-    "        \n",
-    "        # init components\n",
-    "        self.c1 = torch.nn.Conv2d(in_channels=1, out_channels=32, kernel_size=(5,5), stride=1, padding=2) # 28x28 input\n",
-    "        self.c2 = torch.nn.Conv2d(in_channels=self.c1.out_channels, out_channels=64, kernel_size=(5,5), stride=1, padding=2)\n",
-    "        self.pool = torch.nn.MaxPool2d(kernel_size=(2,2), stride=2) # applied after first layer: 14x14 input ; applied after second layer: 7x7\n",
-    "        self.activation = torch.nn.Sigmoid()\n",
-    "        self.fc1 = torch.nn.Linear(7*7*64, 10, bias=True)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        a = self.activation(self.pool(self.c1(x)))\n",
-    "        a = self.activation(self.pool(self.c2(a)))\n",
-    "        a = torch.flatten(a,1)\n",
-    "        return self.fc1(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8c3d096e-8373-4ba0-98cd-e8573254a810",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# obtain MNIST datasets\n",
-    "use_CNN = True # set to false if fully connected network should be used\n",
-    "\n",
-    "transform = torchvision.transforms.ToTensor() if use_CNN else torchvision.transforms.Compose([torchvision.transforms.flatten, torchvision.transforms.ToTensor()])\n",
-    "train_set = torchvision.datasets.MNIST(root=\"data/MNIST\",train=True, download=True,transform=transform)\n",
-    "test_set = torchvision.datasets.MNIST(root=\"data/MNIST\",train=False, download=True,transform=transform)\n",
-    "\n",
-    "# loaders\n",
-    "train_loader = torch.utils.data.DataLoader(\n",
-    "train_set, shuffle=True, batch_size=64)\n",
-    "test_loader = torch.utils.data.DataLoader(\n",
-    "test_set, shuffle=False, batch_size=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7c31ffea-d300-4938-b93f-493b483cef71",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: accuracy test: 0.85\n",
-      "Epoch 2: accuracy test: 0.91\n",
-      "Epoch 3: accuracy test: 0.94\n",
-      "Epoch 4: accuracy test: 0.96\n",
-      "Epoch 5: accuracy test: 0.96\n",
-      "Epoch 6: accuracy test: 0.97\n",
-      "Epoch 7: accuracy test: 0.97\n",
-      "Epoch 8: accuracy test: 0.98\n",
-      "Epoch 9: accuracy test: 0.98\n",
-      "Epoch 10: accuracy test: 0.98\n",
-      "Epoch 11: accuracy test: 0.98\n",
-      "Epoch 12: accuracy test: 0.98\n",
-      "Epoch 13: accuracy test: 0.98\n",
-      "Epoch 14: accuracy test: 0.98\n",
-      "Epoch 15: accuracy test: 0.98\n",
-      "Epoch 16: accuracy test: 0.98\n",
-      "Epoch 17: accuracy test: 0.98\n",
-      "Epoch 18: accuracy test: 0.99\n",
-      "Epoch 19: accuracy test: 0.98\n",
-      "Epoch 20: accuracy test: 0.99\n",
-      "Epoch 21: accuracy test: 0.99\n",
-      "Epoch 22: accuracy test: 0.99\n",
-      "Epoch 23: accuracy test: 0.99\n",
-      "Epoch 24: accuracy test: 0.99\n",
-      "Epoch 25: accuracy test: 0.99\n",
-      "Epoch 26: accuracy test: 0.99\n",
-      "Epoch 27: accuracy test: 0.99\n",
-      "Epoch 28: accuracy test: 0.99\n",
-      "Epoch 29: accuracy test: 0.99\n",
-      "Epoch 30: accuracy test: 0.99\n",
-      "Epoch 31: accuracy test: 0.99\n",
-      "Epoch 32: accuracy test: 0.99\n",
-      "Epoch 33: accuracy test: 0.99\n",
-      "Epoch 34: accuracy test: 0.99\n",
-      "Epoch 35: accuracy test: 0.99\n",
-      "Epoch 36: accuracy test: 0.99\n",
-      "Epoch 37: accuracy test: 0.99\n",
-      "Epoch 38: accuracy test: 0.99\n",
-      "Epoch 39: accuracy test: 0.99\n",
-      "Epoch 40: accuracy test: 0.99\n",
-      "Epoch 41: accuracy test: 0.99\n",
-      "Epoch 42: accuracy test: 0.99\n",
-      "Epoch 43: accuracy test: 0.99\n",
-      "Epoch 44: accuracy test: 0.99\n",
-      "Epoch 45: accuracy test: 0.99\n",
-      "Epoch 46: accuracy test: 0.99\n",
-      "Epoch 47: accuracy test: 0.99\n",
-      "Epoch 48: accuracy test: 0.99\n",
-      "Epoch 49: accuracy test: 0.99\n",
-      "Epoch 50: accuracy test: 0.99\n",
-      "Epoch 51: accuracy test: 0.99\n",
-      "Epoch 52: accuracy test: 0.99\n",
-      "Epoch 53: accuracy test: 0.99\n",
-      "Epoch 54: accuracy test: 0.99\n",
-      "Epoch 55: accuracy test: 0.99\n",
-      "Epoch 56: accuracy test: 0.99\n",
-      "Epoch 57: accuracy test: 0.99\n",
-      "Epoch 58: accuracy test: 0.99\n",
-      "Epoch 59: accuracy test: 0.99\n",
-      "Epoch 60: accuracy test: 0.99\n",
-      "Epoch 61: accuracy test: 0.99\n",
-      "Epoch 62: accuracy test: 0.99\n",
-      "Epoch 63: accuracy test: 0.99\n",
-      "Epoch 64: accuracy test: 0.99\n",
-      "Epoch 65: accuracy test: 0.99\n",
-      "Epoch 66: accuracy test: 0.99\n",
-      "Epoch 67: accuracy test: 0.99\n",
-      "Epoch 68: accuracy test: 0.99\n",
-      "Epoch 69: accuracy test: 0.99\n",
-      "Epoch 70: accuracy test: 0.99\n",
-      "Epoch 71: accuracy test: 0.99\n",
-      "Epoch 72: accuracy test: 0.99\n",
-      "Epoch 73: accuracy test: 0.99\n",
-      "Epoch 74: accuracy test: 0.99\n",
-      "Epoch 75: accuracy test: 0.99\n",
-      "Epoch 76: accuracy test: 0.99\n",
-      "Epoch 77: accuracy test: 0.99\n",
-      "Epoch 78: accuracy test: 0.99\n",
-      "Epoch 79: accuracy test: 0.99\n",
-      "Epoch 80: accuracy test: 0.99\n",
-      "Epoch 81: accuracy test: 0.99\n",
-      "Epoch 82: accuracy test: 0.99\n",
-      "Epoch 83: accuracy test: 0.99\n",
-      "Epoch 84: accuracy test: 0.99\n",
-      "Epoch 85: accuracy test: 0.99\n",
-      "Epoch 86: accuracy test: 0.99\n",
-      "Epoch 87: accuracy test: 0.99\n",
-      "Epoch 88: accuracy test: 0.99\n",
-      "Epoch 89: accuracy test: 0.99\n",
-      "Epoch 90: accuracy test: 0.99\n",
-      "Epoch 91: accuracy test: 0.99\n",
-      "Epoch 92: accuracy test: 0.99\n",
-      "Epoch 93: accuracy test: 0.99\n",
-      "Epoch 94: accuracy test: 0.99\n",
-      "Epoch 95: accuracy test: 0.99\n",
-      "Epoch 96: accuracy test: 0.99\n",
-      "Epoch 97: accuracy test: 0.99\n",
-      "Epoch 98: accuracy test: 0.99\n",
-      "Epoch 99: accuracy test: 0.99\n",
-      "Epoch 100: accuracy test: 0.99\n"
+      "Enrolling Gallery...\n",
+      "Scoring...\n",
+      "Recognized  8 of 14 faces ( 57.14%) with centerlight\n",
+      "Recognized 10 of 15 faces ( 66.67%) with leftlight\n",
+      "Recognized 15 of 15 faces (100.00%) with normal\n",
+      "Recognized 13 of 15 faces ( 86.67%) with noglasses\n",
+      "Recognized 14 of 15 faces ( 93.33%) with happy\n",
+      "Recognized 14 of 15 faces ( 93.33%) with wink\n",
+      "Recognized 15 of 15 faces (100.00%) with sleepy\n",
+      "Recognized 15 of 15 faces (100.00%) with surprised\n",
+      "Recognized  8 of 15 faces ( 53.33%) with rightlight\n",
+      "Recognized 14 of 15 faces ( 93.33%) with sad\n",
+      "Recognized  9 of 15 faces ( 60.00%) with glasses\n",
+      "\n",
+      "Accuracy: 135 of 164 faces ( 82.32%)\n"
      ]
     }
    ],
    "source": [
-    "# define variables\n",
-    "K = 10 # hiddent neurons\n",
-    "epochs = 100\n",
-    "lr = 0.01\n",
-    "momentum = 0.9\n",
+    "def _forward_impl(self, x): # overwrite forward function from resnet-18\n",
+    "    x = self.conv1(x)\n",
+    "    x = self.bn1(x)\n",
+    "    x = self.relu(x)\n",
+    "    x = self.maxpool(x)\n",
+    "    \n",
+    "    x = self.layer1(x)\n",
+    "    x = self.layer2(x)\n",
+    "    x = self.layer3(x)\n",
+    "    x = self.layer4(x)\n",
+    "    \n",
+    "    x = self.avgpool(x)\n",
+    "    x = torch.flatten(x,1)\n",
+    "    # x = self.fc(x) skip this step!!\n",
+    "    \n",
+    "    return x\n",
     "\n",
-    "# init network\n",
-    "network = CNN_Network(K) if use_CNN else Fully_Connected_Network(K) # choose network\n",
-    "loss = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(params=network.parameters(), lr=lr, momentum=momentum)\n",
+    "network = torchvision.models.resnet18(pretrained=True) # load pretrained model resnet-18\n",
+    "network.eval()\n",
+    "network._forward_impl = types.MethodType(_forward_impl, network) # overwrite forward function to skip fully connected layer\n",
     "\n",
-    "# training epochs\n",
-    "for epoch in range(epochs):\n",
-    "    # iterate over training set\n",
-    "    for x,t in train_loader:\n",
-    "        optimizer.zero_grad()\n",
-    "        z = network(x)\n",
-    "        J = loss(z, t)\n",
-    "        J.backward()\n",
-    "        optimizer.step() # apply gradient step\n",
-    "    # compute test accuracy\n",
-    "    correct_class_count = 0\n",
+    "# define image transformations\n",
+    "transform = torchvision.transforms.Compose([\n",
+    "    torchvision.transforms.Resize(300),\n",
+    "    torchvision.transforms.CenterCrop(224), # take only center from image\n",
+    "    torchvision.transforms.ToTensor(), # PIL image to tensor\n",
+    "    lambda x : x.repeat(3,1,1), # model expects RGB layers, as we have only Grayscale images we copy it such that we have 3 Channels with the same Image\n",
+    "    torchvision.transforms.Normalize(\n",
+    "        mean=[0.485, 0.456, 0.406],\n",
+    "        std=[0.229, 0.224, 0.225]\n",
+    "    ),\n",
+    "    lambda x : x.unsqueeze(0) # required by pytorch (add batch dimension)\n",
+    "])\n",
+    "\n",
+    "def extract(path):\n",
     "    with torch.no_grad():\n",
-    "        for x,t in test_loader:\n",
-    "            z = network(x)\n",
-    "            _, y = torch.max(z.data, 1) # returns maximum value and idx y\n",
-    "            correct_class_count += (y == t).sum().item()\n",
-    "    print(F\"Epoch {epoch+1}: accuracy test: {correct_class_count / len(test_set):1.2f}\")"
+    "        image = PIL.Image.open(path) # load image\n",
+    "        tensor = transform(image) # apply transformation defined above\n",
+    "        feature = network(tensor)\n",
+    "        return feature.numpy().flatten() # convert to a 1-dimensional vector\n",
+    "    \n",
+    "# load gallery\n",
+    "print(\"Enrolling Gallery...\")\n",
+    "gallery = {}\n",
+    "for index in range(1,16):\n",
+    "    subject = F\"subject{index:02d}\" # get subject info\n",
+    "    gallery[subject] = extract(F\"yalefaces/{subject}.normal\") # add the normal positions of each face to the gallery\n",
+    "    \n",
+    "\n",
+    "print(\"Scoring...\")\n",
+    "variations = collections.defaultdict(lambda: [0,0]) # store number of correct identifiactions  and total number of indetifications per variation\n",
+    "for filename in os.listdir(\"yalefaces\"):\n",
+    "    probe_subject, variation = os.path.splitext(filename) # split subject and filename extension\n",
+    "    path = os.path.join(\"yalefaces\", filename) # create filepath\n",
+    "    \n",
+    "    if not os.path.isfile(path): # ignore directories\n",
+    "        continue\n",
+    "    \n",
+    "    probe_feature = extract(path) # apply transformations\n",
+    " \n",
+    "    min_distance = 1e8 # set to high value in the beginning\n",
+    "    for gallery_subject, gallery_feature in gallery.items(): # iterate over the defined gallery\n",
+    "        dist = distance.euclidean(gallery_feature, probe_feature) # compute euclidean distance between gallery feature and probe feature\n",
+    "        if dist < min_distance: # check if distance is smaller, if true set it to best subject\n",
+    "            min_distance = dist\n",
+    "            best_subject = gallery_subject\n",
+    "    \n",
+    "    # check if face was recognized for each variation\n",
+    "    variations[variation][0] += best_subject == probe_subject # we increase by one if the subject was correctly identified\n",
+    "    variations[variation][1] += 1 # we increase this after each iteration such that we have a total number\n",
+    "    \n",
+    "# print rates for each variation\n",
+    "for variation, results in variations.items():\n",
+    "    print(F\"Recognized {results[0]:2} of {results[1]} faces ({100 * results[0] / results[1]:6.2f}%) with {variation[1:]}\")\n",
+    "    \n",
+    "# print total accuracy\n",
+    "total = numpy.sum(list(variations.values()), axis=0)\n",
+    "print(F\"\\nAccuracy: {total[0]:3} of {total[1]} faces ({100 * total[0] / total[1]:6.2f}%)\")\n"
    ]
   }
  ],
