--- a/9/star_gan.ipynb
+++ b/9/star_gan.ipynb
@@ -10,262 +10,101 @@
     "import torch\n",
     "import torchvision\n",
     "import PIL\n",
-    "import numpy\n",
-    "import collections\n",
-    "import types\n",
-    "from scipy.spatial import distance\n",
-    "import os"
+    "import csv\n",
+    "import os\n",
+    "from StarGAN.model import Generator"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "streaming-agent",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Network(torch.nn.Module):\n",
-    "    def __init__(self, K, O):\n",
-    "        super(Network, self).__init__()\n",
-    "        self.conv1 = torch.nn.Conv2d(in_channels=1, out_channels=32, kernel_size=(5,5), stride=1, padding=2)\n",
-    "        self.conv2 = torch.nn.Conv2d(in_channels=self.conv1.out_channels, out_channels=32, kernel_size=(5,5), stride=1, padding=2)\n",
-    "        self.pool = torch.nn.MaxPool2d(kernel_size=(2,2), stride=2)\n",
-    "        self.activation = torch.nn.Sigmoid()\n",
-    "        self.bn = torch.nn.BatchNorm2d(self.conv2.out_channels)\n",
-    "        \n",
-    "        self.fc1 = torch.nn.Linear(7*7*32, K, bias=True)\n",
-    "        self.fc2 = torch.nn.Linear(K, O)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        a = self.activation(self.pool(self.conv1(x)))\n",
-    "        a = self.activation(self.bn(self.pool(self.conv2(a))))\n",
-    "        a = torch.flatten(a,1)    \n",
-    "        return self.fc2(self.activation(self.fc1(a)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "68c6df4d-4a07-4d5a-89f4-e94b039f2a8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# one hot vector for targets\n",
-    "class TargetVector():\n",
-    "    def __init__(self, known_targets = (4,5,8,9), unknown_targets = (0,2,3,7), ignored_targets = (1,6)):\n",
-    "        self.known_targets = known_targets\n",
-    "        self.unknown_targets = unknown_targets\n",
-    "        self.ignored_targets = ignored_targets\n",
-    "        \n",
-    "        # generate one hot representation of known targets\n",
-    "        self.one_hot_known = numpy.eye(len(known_targets))\n",
-    "        self.target_known = {k:self.one_hot_known[i] for i,k in enumerate(self.known_targets)}\n",
-    "        \n",
-    "        # generate one hot representation of unknown targets\n",
-    "        self.target_unknown = numpy.ones(len(known_targets)) / len(known_targets)\n",
-    "        \n",
-    "    # creates target batch for given targets    \n",
-    "    def __call__(self, inputs, targets):\n",
-    "        valid = []\n",
-    "        vectors = []\n",
-    "    \n",
-    "        # split off unknown unknown samples\n",
-    "        for i, t in enumerate(targets):\n",
-    "            if t in self.known_targets:\n",
-    "                vectors.append(self.target_known[int(t)])\n",
-    "                valid.append(inputs[i].numpy())\n",
-    "            elif t in self.unknown_targets:\n",
-    "                vectors.append(self.target_unknown)\n",
-    "                valid.append(inputs[i].numpy())\n",
-    "                \n",
-    "        # filtered original inputs and one hot vector\n",
-    "        return torch.tensor(valid), torch.tensor(vectors)\n",
-    "    \n",
-    "    # predicts class & its confidence\n",
-    "    def predict(self, logits):\n",
-    "        # softmax over logits in batch\n",
-    "        confidences = torch.nn.functional.softmax(logits, dim=1)\n",
-    "        \n",
-    "        # indexes of the prediction\n",
-    "        indexes = torch.argmax(logits, dim=1)\n",
-    "        \n",
-    "        # confidences for the predicted values\n",
-    "        max_confidences = confidences[range(len(logits)), indexes]\n",
-    "        \n",
-    "        # return tuple predicted class and confidence for a batch\n",
-    "        return [(self.known_targets[indexes[i]], max_confidences[i]) for i in range(len(logits))]\n",
-    "    \n",
-    "    # computes the confidence metric for given samples\n",
-    "    def confidences(self, logits, targets):\n",
-    "        # softmax over logits in batch\n",
-    "        confidences = torch.nn.functional.softmax(logits, dim=1).numpy()\n",
-    "        \n",
-    "        # return confidence of correct class for known samples and 1-max(confidences) + 1/0 for unknown samples\n",
-    "        return [\n",
-    "            numpy.sum(confidences[i] * self.target_known[int(targets[i])])\n",
-    "            if targets[i] in self.known_targets\n",
-    "            else 1 - numpy.max(confidences[i]) + 1./len(self.known_targets)\n",
-    "            for i in range(len(logits))\n",
-    "        ]\n",
-    "        \n",
-    "def adapted_softmax_loss(self, logits, targets):\n",
-    "    return - torch.mean(torch.nn.functional.log_softmax(logits, dim=1) * targets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4a315d17-79ab-4e44-a27b-9ab5e95596fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class AdaptedSoftmaxFunction(torch.autograd.Function):\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def forward(ctx, logits, targets):\n",
-    "        # compute log probabilities via log softmax\n",
-    "        log_y = torch.log_softmax(logits, dim=1)\n",
-    "        ctx.save_for_backward(log_y, targets)\n",
-    "        \n",
-    "        # return the computed loss\n",
-    "        return - torch.mean(log_y * targets)\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def backward(ctx, result):\n",
-    "        # get stored result from forward pass\n",
-    "        log_y, targets = ctx.saved_tensors\n",
-    "        \n",
-    "        # compute probablities from log probabilities\n",
-    "        y = torch.exp(log_y)\n",
-    "        \n",
-    "        # return y-t as Jacobian for the logits, None for the targets\n",
-    "        return y - targets, None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "native-jaguar",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get the MNIST dataset\n",
-    "transform = torchvision.transforms.ToTensor()\n",
-    "train_set = torchvision.datasets.MNIST(\n",
-    "    root=\"/tmp/MNIST\",\n",
-    "    train=True, download=True, \n",
-    "    transform=transform\n",
-    ")\n",
-    "\n",
-    "test_set = torchvision.datasets.MNIST(\n",
-    "    root=\"/tmp/MNIST\",\n",
-    "    train=False, download=True,\n",
-    "    transform=transform\n",
-    ")\n",
-    "\n",
-    "# loaders\n",
-    "train_loader = torch.utils.data.DataLoader(\n",
-    "    train_set, shuffle=True, batch_size=32\n",
-    ")\n",
-    "\n",
-    "test_loader = torch.utils.data.DataLoader(\n",
-    "    test_set, shuffle=False, batch_size=32\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "accepting-circulation",
+   "id": "c823f1d3-551b-4d28-8358-56abb5a3bbd0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, test known: 11.69 %, known unknown: 93.51 %, unknown unknown: 76.06 %, average confidence: 0.82891\n",
-      "Epoch 1, test known: 12.50 %, known unknown: 99.73 %, unknown unknown: 42.47 %, average confidence: 0.90159\n",
-      "Epoch 2, test known: 12.68 %, known unknown: 98.81 %, unknown unknown: 45.34 %, average confidence: 0.90613\n",
-      "Epoch 3, test known: 12.76 %, known unknown: 99.46 %, unknown unknown: 28.62 %, average confidence: 0.89500\n",
-      "Epoch 4, test known: 12.65 %, known unknown: 99.41 %, unknown unknown: 40.56 %, average confidence: 0.90864\n",
-      "Epoch 5, test known: 12.68 %, known unknown: 99.23 %, unknown unknown: 29.96 %, average confidence: 0.89688\n",
-      "Epoch 6, test known: 12.73 %, known unknown: 99.68 %, unknown unknown: 40.04 %, average confidence: 0.90768\n",
-      "Epoch 7, test known: 12.65 %, known unknown: 99.38 %, unknown unknown: 33.83 %, average confidence: 0.90036\n",
-      "Epoch 8, test known: 12.70 %, known unknown: 99.73 %, unknown unknown: 46.97 %, average confidence: 0.91815\n",
-      "Epoch 9, test known: 12.70 %, known unknown: 99.68 %, unknown unknown: 50.02 %, average confidence: 0.91375\n",
-      "Epoch 10, test known: 12.78 %, known unknown: 99.11 %, unknown unknown: 24.27 %, average confidence: 0.89072\n",
-      "Epoch 11, test known: 12.73 %, known unknown: 99.65 %, unknown unknown: 45.68 %, average confidence: 0.91977\n",
-      "Epoch 12, test known: 12.76 %, known unknown: 99.75 %, unknown unknown: 49.16 %, average confidence: 0.92058\n",
-      "Epoch 13, test known: 12.68 %, known unknown: 99.60 %, unknown unknown: 33.21 %, average confidence: 0.90348\n",
-      "Epoch 14, test known: 12.70 %, known unknown: 99.73 %, unknown unknown: 38.84 %, average confidence: 0.91237\n",
-      "Epoch 15, test known: 12.70 %, known unknown: 99.68 %, unknown unknown: 37.79 %, average confidence: 0.90999\n",
-      "Epoch 16, test known: 12.81 %, known unknown: 99.63 %, unknown unknown: 34.40 %, average confidence: 0.90645\n"
+      "tensor([[0., 0., 0., 0., 1.]])\n",
+      "tensor([[1., 0., 0., 0., 1.]])\n",
+      "tensor([[0., 1., 0., 0., 1.]])\n",
+      "tensor([[0., 0., 1., 0., 1.]])\n",
+      "tensor([[0., 0., 0., 1., 1.]])\n",
+      "tensor([[0., 0., 0., 0., 0.]])\n"
      ]
     }
    ],
    "source": [
-    "# training\n",
+    "input_image = 'StarGAN/data/celeba/images/000010.jpg'\n",
     "\n",
-    "network = Network(50, 4)\n",
+    "# list of attributes that StarGan uses\n",
+    "attributes = ['Black_Hair', 'Blond_Hair', 'Brown_Hair', 'Male', 'Young']\n",
     "\n",
-    "loss = AdaptedSoftmaxFunction.apply\n",
+    "# load original labels for the input_image\n",
+    "def load_original_labels():\n",
+    "    with open('StarGAN/data/celeba/list_attr_celeba.txt') as f:\n",
+    "        r = csv.reader(f, delimiter=\" \", skipinitialspace=True)\n",
+    "        # skip first line\n",
+    "        next(r)\n",
+    "        # read header\n",
+    "        header = next(r)\n",
+    "        base = os.path.basename(input_image)\n",
+    "        # parse file\n",
+    "        for line in r:\n",
+    "            if line[0] == base:\n",
+    "                # convert {-1, 1} labels  into {0,1} labels\n",
+    "                return torch.tensor([(float(line[header.index(a)+1]) + 1) / 2 for a in attributes])\n",
     "\n",
-    "optimizer = torch.optim.SGD(\n",
-    "    params=network.parameters(),\n",
-    "    lr=0.01, momentum=0.9\n",
-    "    )\n",
+    "# load labels\n",
+    "tt = load_original_labels()\n",
+    "orig_target = tt.unsqueeze(0)\n",
+    "print(orig_target)\n",
     "\n",
-    "targets = TargetVector()\n",
+    "# load image via PIL\n",
+    "image = PIL.Image.open(input_image)\n",
     "\n",
-    "threshold = 0.5\n",
-    "epochs = 100\n",
+    "# define transform according to Star Gan implementation\n",
+    "transform = torchvision.transforms.Compose([\n",
+    "    torchvision.transforms.CenterCrop(image.size[0]),\n",
+    "    torchvision.transforms.Resize(128),\n",
+    "    torchvision.transforms.ToTensor(),\n",
+    "    torchvision.transforms.Normalize(mean=(0.5, 0.5, 0.5), std=(0.5, 0.5, 0.5))\n",
+    "])\n",
     "\n",
-    "for epoch in range(epochs):\n",
-    "    for x, t in train_loader:\n",
-    "        optimizer.zero_grad()\n",
-    "        x,t = targets(x,t)\n",
-    "        z = network(x)\n",
-    "        J = loss(z, t)\n",
-    "        J.backward()\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "    # evaluation correctly classified and total number of samples\n",
-    "    k, ku, uu = 0, 0, 0\n",
-    "    nk, nku, nuu = 0, 0, 0\n",
-    "    \n",
-    "    # evaluation: average confidence\n",
-    "    conf = 0.\n",
-    "    with torch.no_grad():\n",
-    "        for x,t in test_loader:\n",
-    "            z = network(x)\n",
-    "            \n",
-    "            # compute predicted classes and confidences\n",
-    "            predictions = targets.predict(z)\n",
-    "            \n",
-    "            # add confidence metric for a batch\n",
-    "            conf += numpy.sum(targets.confidences(z,t))\n",
-    "            \n",
-    "            # compute accuracy\n",
-    "            for i in range(len(t)):\n",
-    "                # iterate over all samples in batch\n",
-    "                if t[i] in targets.known_targets:\n",
-    "                    # known sample: correctly classified?\n",
-    "                    if predictions[i][0] == int(t[1]) and predictions[i][1] >= threshold:\n",
-    "                        k += 1\n",
-    "                    nk += 1\n",
-    "                elif t[i] in targets.unknown_targets:\n",
-    "                    # known unknown sample: correctly rejected?\n",
-    "                    if predictions[i][1] < threshold:\n",
-    "                        ku += 1\n",
-    "                    nku += 1\n",
-    "                else:\n",
-    "                    # unknown unknown sample: correctly rejected?\n",
-    "                    if predictions[i][1] < threshold:\n",
-    "                        uu += 1\n",
-    "                    nuu += 1\n",
-    "        \n",
-    "        # print epochs and metrics\n",
-    "        print(F\"Epoch {epoch}, test known: {k/nk*100.:1.2f} %, known unknown: {ku/nku*100.:1.2f} %, unknown unknown: {uu/nuu*100.:1.2f} %, average confidence: {conf/len(test_set):1.5f}\")"
+    "# load generator network\n",
+    "G_path = \"StarGAN/stargan_celeba_128/models/200000-G.ckpt\"\n",
+    "G = Generator(64, len(attributes), 6)\n",
+    "G.load_state_dict(torch.load(G_path, map_location=lambda storage, loc: storage))\n",
+    "\n",
+    "# save function image\n",
+    "topil = torchvision.transforms.ToPILImage()\n",
+    "def save_image(tensor, image):\n",
+    "    tensor = torch.clamp(tensor * 0.5 + 0.5, 0, 1) # undo normalization and clamp image into pixel range\n",
+    "    image = topil(tensor) # convert to PIL image\n",
+    "    image.save(filename)\n",
+    "\n",
+    "# transform image to tensor\n",
+    "tensor = transform(image)\n",
+    "                                    \n",
+    "# write original image\n",
+    "base = os.path.splitext(os.path.basename(input_image))[0]\n",
+    "filename = os.path.join(\"images\", f\"{base}.png\")\n",
+    "save_image(tensor, filename)\n",
+    "                                    \n",
+    "# modify several attributes\n",
+    "for i in range(len(attributes)):\n",
+    "    target = torch.zeros(orig_target.shape) # reset all attributes to zero\n",
+    "    for j in (3,4):\n",
+    "        target[0,j] = orig_target[0,j] # copy gender & age from original image\n",
+    "    target[0,i] = 1 - orig_target[0,i] # change specific attribute\n",
+    "    print(target)\n",
+    "\n",
+    "    # generate image from original image and modified target attribute vector\n",
+    "    generated = G(tensor.unsqueeze(0), target).squeeze(0)\n",
+    "\n",
+    "    # save generated image\n",
+    "    filename = os.path.join(\"images\", f\"{base}-{attributes[i]}-{int(target[0,i])}.png\")\n",
+    "    save_image(generated, filename)"
    ]
   }
  ],
